--- a/PAGES/8b_TS-scalarsVectors/index.html
+++ b/PAGES/8b_TS-scalarsVectors/index.html
@@ -2568,8 +2568,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Types of Scalars and Vectors</h2></p>
-<p>Recall that the formal definition of a type-stable function is that the output type can be inferred from the argument types. In practice, however, we often rely on a more stringent definition of type stability, which requires that the compiler can infer a single concrete type for each expression within the function. This property guarantees that every operation is specialized, resulting in optimal performance.  Nevertheless, demanding that the output&#39;s type can be inferred already offers benefits, as it ensures that type instability won&#39;t be propagated when the function is called in other operations.</p>
-<p>The principle applied to scalars is immediate, demanding operations be performed on variables with the same concrete type. In contrast, type stability for vectors rather requires that the  <em>elements</em> have a concrete type, such as <code>Float64</code>, <code>Int64</code>, or <code>Bool</code>. The following table identifies scalars and vectors satisfying this property.</p>
+<p>Recall that the formal definition of a type-stable function is that the output type of the function can be inferred from its argument types. In practice, however, we often rely on a more stringent definition of type stability, which requires that the compiler can infer a single concrete type for each expression within the function. This property guarantees that every operation is specialized, resulting in optimal performance.  Nevertheless, simply demanding that the output&#39;s type can be inferred already offers benefits, by ensuring that type instability won&#39;t be propagated when the function is called in other operations.</p>
+<p>The principle applied to scalars is straightforward, demanding operations be performed on variables with the same concrete type &#40;e.g., <code>Float64</code>, <code>Int64</code>, <code>Bool</code>&#41;. In contrast, type stability for vectors rather requires that the  <em>elements</em> have a concrete type. The following table identifies scalars and vectors satisfying this property.</p>
 <p>
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;}
@@ -2625,11 +2625,11 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Type Stability with Scalars</h2></p>
-<p>To turn the definition of type stability for scalars operational, let&#39;s revisit some concepts about types. Recall that only concrete types like <code>Int64</code> or <code>Float64</code> can be <a href="/julia_book/PAGES/7c_TS-onTypes/#instantiate">instantiated</a>, while abstract types like <code>Any</code> or <code>Number</code> can&#39;t. </p>
+<p>To turn the definition of type stability for scalars operational, let&#39;s revisit some concepts about types. Recall that only concrete types like <code>Int64</code> or <code>Float64</code> can be <a href="/julia_book/PAGES/7c_TS-onTypes/#instantiate">instantiated</a>, while abstract types like <code>Any</code> or <code>Number</code> can&#39;t.</p>
 <p>Instantiation simply means that all values ultimately adopt a unique concrete type. For instance, a variable <code>x::Number &#61; 2</code> shouldn&#39;t be interpreted as <code>x</code> having the type <code>Number</code>. Instead, it means that <code>x</code> can only be reassigned to values whose concrete type is a subtype of <code>Number</code>. Ultimately, <code>x</code> must have a concrete type, which in this case is <code>Int64</code>.</p>
-<p>In this context, type instability could arise if operations mix <code>Int64</code> and <code>Float64</code>, although this isn&#39;t always the case. To illustrate this, we&#39;ll start showing some scenarios where mixing these types doesn&#39;t cause issues.</p>
+<p>In this context, type instability may arise when operations mix <code>Int64</code> and <code>Float64</code>, although this isn&#39;t always the case. To illustrate this, we&#39;ll start showing some scenarios where mixing these types doesn&#39;t cause issues.</p>
  <h4> Type Promotion and Conversion </h4>
-<p>Julia employs various mechanisms to handle cases combining <code>Int64</code> and <code>Float64</code>. The first one is part of a more general concept known as <span style="color: rgb(62, 121, 180);"><strong>type promotion</strong></span>, which converts dissimilar types to a common one whenever possible. Likewise, when variables are type-annotated, Julia also engages in <span style="color: rgb(62, 121, 180);"><strong>conversions</strong></span>. By transforming values to the respective type declared, this is also capable of preventing the mix of types.</p>
+<p>Julia employs various mechanisms to handle cases combining <code>Int64</code> and <code>Float64</code>. The first one is part of a concept known as <span style="color: rgb(62, 121, 180);"><strong>type promotion</strong></span>, which converts dissimilar types to a common one whenever possible. The second one emerges when variables are type-annotated, in which case Julia engages in <span style="color: rgb(62, 121, 180);"><strong>type conversions</strong></span>. By transforming values to the respective type declared, this feature could also prevent the mix of types.</p>
 <p>Both mechanisms are illustrated below.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2834,7 +2834,7 @@ sum&#40;x6&#41;             # type UNSTABLE -&gt; &#96;sum&#96; must consider al
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified September 21, 2024 
+          © Martin Alfaro <br>Last Modified September 22, 2024 
       </span> 
   </div> 
 </footer>
